--- a/catalog/templates/home/products.html
+++ b/catalog/templates/home/products.html
@@ -78,7 +78,6 @@
   {% endif %}
 </div>
 
-</div>
 <div class="btt-button shadow-sm rounded-0 border border-black">
   <a class="btt-link d-flex h-100" aria-label="go to the top of the page">
     <i class="fas fa-arrow-up text-black mx-auto my-auto"></i>
@@ -88,9 +87,9 @@
 
 {% block postloadjs %}
 {{ block.super }}
-<script type="text/javascript">
+<script>
   $('.btt-link').click(function (e) {
-    window.scrollTo(0, 0)
-  })
+    window.scrollTo(0, 0);
+  });
 </script>
 {% endblock %}
