--- a/templates/base.html
+++ b/templates/base.html
@@ -124,7 +124,7 @@
           aria-controls="main-nav" aria-expanded="false" aria-label="Toggle navigation">
           <span><i class="fa-solid fa-bars text-white"></i></span>
         </button>
-        <menu style="all: unset">{% include 'includes/mobile-top-header.html' %}</menu>
+        {% include 'includes/mobile-top-header.html' %}
         
         {% include 'includes/desktop-top-header.html' %}
       </nav>
